<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ripple="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/camera_background_black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginRight="5dip"
        android:layout_weight="0.5"
        android:background="@color/camera_background_black">

        <LinearLayout
            android:id="@+id/camera_display_flash_types_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_gravity="right"
            android:layout_marginRight="2dip"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/camera_display_flash_types"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_action_flash_on" />
        </LinearLayout>


        <TextView
            android:id="@+id/camera_flash_type_auto"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/camera_flash_margin_right"
            android:layout_toRightOf="@id/camera_display_flash_types_layout"
            android:background="@color/camera_background_black"
            android:gravity="center_vertical"
            android:tag="@string/tag_camera_flash_auto"
            android:text="@string/camera_flash_auto"
            android:textColor="@color/app_text_white" />

        <TextView
            android:id="@+id/camera_flash_type_on"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/camera_flash_margin_right"
            android:layout_toRightOf="@id/camera_flash_type_auto"
            android:background="@color/camera_background_black"
            android:gravity="center_vertical"
            android:tag="@string/tag_camera_flash_on"
            android:text="@string/camera_flash_on"
            android:textColor="@color/app_text_white" />

        <TextView
            android:id="@+id/camera_flash_type_off"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginRight="@dimen/camera_flash_margin_right"
            android:layout_toRightOf="@id/camera_flash_type_on"
            android:background="@color/camera_background_black"
            android:gravity="center_vertical"
            android:tag="@string/tag_camera_flash_off"
            android:text="@string/camera_flash_off"
            android:textColor="@color/app_text_white" />

        <LinearLayout
            android:id="@+id/switch_camera_layout"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical">

            <ImageButton
                android:id="@+id/switch_camera"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="5dip"
                android:background="@drawable/ic_action_switch_camera"
                android:gravity="center_vertical" />
        </LinearLayout>


    </RelativeLayout>

    <FrameLayout
        android:id="@+id/camera_container"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2" />

    <ro.utcn.foodapp.presentation.customview.FocusBoxView
        android:id="@+id/focus_box"
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="2" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="5dip"
        android:layout_marginRight="5dip"
        android:layout_weight="1"
        android:background="@color/camera_background_black"
        android:orientation="vertical">

        <SeekBar
            android:id="@+id/zoom"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:background="@color/camera_background_black"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/camera_cancel_take_photo"
                android:layout_width="60dip"
                android:layout_height="match_parent"
                android:layout_marginLeft="5dip"
                android:gravity="center_vertical"
                android:text="@string/camera_cancel_take_photo"
                android:textColor="@color/app_text_white"
                android:textSize="18sp" />

            <com.andexert.library.RippleView
                android:id="@+id/take_photo_ripple"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:layout_marginRight="70dip"
                android:gravity="center"
                ripple:rv_centered="true">

                <LinearLayout
                    android:id="@+id/take_picture_container"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center">


                    <ImageButton
                        android:id="@+id/take_photo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:background="@drawable/ic_camera_alt_white_48dp"
                        android:gravity="center" />


                </LinearLayout>
            </com.andexert.library.RippleView>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>