<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:fab="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/app_text_white"
    android:orientation="vertical"
    tools:context="ro.utcn.foodapp.presentation.activities.AddProductActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dip"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            style="@style/AppTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_add_product_name_cam_btn"
                    style="@style/Avatar.WithText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_product_name" />

                <EditText
                    android:id="@+id/activity_add_product_name_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/product_name"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/material_blue_grey_950"
                    android:textColorHint="@color/ripple" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/AppTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_add_product_ingredients_cam_btn"
                    style="@style/Avatar.WithText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_ingredients" />

                <EditText
                    android:id="@+id/activity_add_product_ingredients_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/product_ingredients"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/material_blue_grey_950"
                    android:textColorHint="@color/ripple" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/AppTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_add_product_expiration_date_cam_btn"
                    style="@style/Avatar.WithText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_timer" />

                <EditText
                    android:id="@+id/activity_add_product_expiration_date_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/product_expiration_date"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/material_blue_grey_950"
                    android:textColorHint="@color/ripple" />

            </LinearLayout>
        </android.support.v7.widget.CardView>

        <android.support.v7.widget.CardView
            style="@style/AppTheme.CardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:id="@+id/activity_add_product_pieces_number_cam_btn"
                    style="@style/Avatar.WithText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:src="@drawable/ic_numeric" />

                <EditText
                    android:id="@+id/activity_add_product_pieces_number_edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="2dp"
                    android:layout_marginRight="4dp"
                    android:layout_marginTop="5dp"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/product_pieces_number"
                    android:inputType="textNoSuggestions"
                    android:textColor="@color/material_blue_grey_950"
                    android:textColorHint="@color/ripple" />

            </LinearLayout>
        </android.support.v7.widget.CardView>


        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="bottom">

            <com.melnykov.fab.FloatingActionButton
                android:id="@+id/activity_add_product_button_take_picture"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="right"
                android:layout_margin="16dp"
                android:src="@drawable/ic_action_camera"
                fab:fab_colorNormal="@color/ripple"
                fab:fab_colorPressed="@color/accent"
                fab:fab_colorRipple="@color/ripple" />
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
